--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
-    agent any
-    stages { 
-        stage('Example') {
+    agent { label 'jenkins-slave' }
+    stages {
+        stage('build') {
             steps {
-                echo 'Hello World'
+                sh 'echo hello'
             }
         }
     }
